
0.10.1a Apr 27, 2009
 * added support for txz package extension
 * updated de translation from Manfred Mueller
 * updated pt_BR translation from Sergio Surkamp
 * moved slapt_pkg_version_parts out of public header

0.10.1 Dec 12, 2008
 * fixed an initialization errror in slapt_is_required_by() that
   caused a segfault when removing with --no-deps.
 * if no package sources are defined with a priority, disable use of
   priorities when dealing with /patches.  This prevents the previous
   default slapt-get behavior from changing and causing confusion.  With
   priorities, /patches is always assigned +1 above the package sources
   priority.  So if no priorities were in use then anything found in any
   sources /patches always trumped anything else.  This is probably the
   most correct behavior but it is still unexpected for existing users.
   To get the correct behavior, assign a priority to one or more sources.
 * reordered priorities to "default < official < preferred < custom" as
   this seems to be more intuitive.  Having preferred less than official
   is confusing.

0.10.0 Dec 12, 2008
 * validate against installed package list when creating a list of obsolete
   packages and their dependencies so as to not try and remove uninstalled
   packages
 * translation updates
 * (libslapt) added slapt_write_rc_config (incorporating from gslapt)
 * (libslapt) added parsing of disabled sources (instead of ignoring what
    gslapt creates).
 * test updates
 * Added source priority support based on patch submitted by Ken Milmore
 * Added support for ikg extension (requested by Miguel Reynosso)
 * Fix for MD5 string length (Thanks to Boris Popov)

0.9.12e May 10, 2008
 * only accept content length instead of last modified date if url is NOT ftp.
   This enforces 404 errors for those sources that like to have custom 404
   pages.
 * make --ignore-dep ignore conflicts on upgrade
 * test updates
 * Romanian translation by Reteaua PTM.

0.9.12d Feb 22, 2008